# usdm-bc-mapper

./: README.md  example.py  pyproject.toml
src/usdm_bc_mapper/: __init__.py  _types.py  cdisc_bc_search.py  cli.py  find_bc.py  llm.py  mapper.py  settings.py
src/usdm_bc_mapper/data/: cdisc_biomedical_concepts_latest.csv  cdisc_sdtm_dataset_specializations_latest.csv  system_prompt.txt
src/usdm_bc_mapper/data/cdisc_terminology/: SEND Terminology.txt
tests/: test_cdisc_bc_search.py  test_llm.py
